Border at the bottom of each file diff

--- a/loggerhead/static/css/diff.css
+++ b/loggerhead/static/css/diff.css
@@ -64,6 +64,11 @@ ul#list-files li.desc {
 .unified .lineNumber.second {
     border-left: 0;
     }
+.unified {
+    border-width: 1px;
+    border-bottom-style: solid;
+    border-color: #d5d5d5;
+}
 .code,
 .lineNumber {
     float: left;
