Proper border at the bottom of file diffs (Sorry about the number of commits!)

--- a/loggerhead/static/css/diff.css
+++ b/loggerhead/static/css/diff.css
@@ -52,6 +52,7 @@ ul#list-files li.desc {
     }
 .diffinfo {
     overflow: hidden;
+    border-bottom: 1px solid #d5d5d5;
     }
 .lineNumber {
     width: 2%;
