Rounded borders on the info box

--- a/loggerhead/static/css/diff.css
+++ b/loggerhead/static/css/diff.css
@@ -6,6 +6,9 @@
     color: #666;
     background: #fcfcfc url(../images/bg_infobox.gif) repeat-y top right;
     border: 1px solid #b7b7b7;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    border-radius: 7px; 
     }
 ul#list-files {
     float: right;
