Added more columns with additional info to directory and inventory views.

--- a/loggerhead/static/css/view.css
+++ b/loggerhead/static/css/view.css
@@ -5,8 +5,7 @@
     }
 .viewRev {
     border-right: none;
-    white-space: nowrap;
-    width: 1px;
+    width: 20%;
     padding: .3em .6em;
     }
 .viewComm,
